# New-Format-Reader

./: .gitignore  CMakeLists.txt
src/: Benchmark.h  Utilities.cpp  Utilities.h  main.cpp
src/CYFileReader/: BinaryFileReader.cpp  BinaryFileReader.h  FileReader.cpp  FileReader.h
src/CYObjects/: CYLevel.h  CYObject.cpp  CYObject.h  CYObjectId.h
